[package]
name = "pollcatch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "finds long Tokio polls"
homepage = "https://github.com/arielb1/pollcatch"
repository = "https://github.com/arielb1/pollcatch"
documentation = "https://docs.rs/pollcatch"
readme = "README.md"
keywords = ["timing"]

[dependencies]
pin-project-lite = "0.2"
libc = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
libloading = "0.8"
anyhow = "1"

[[example]]
name = "simple"
