[package]
name = "pollcatch-decoder"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "finds long Tokio polls, CLI"
homepage = "https://github.com/arielb1/pollcatch"
repository = "https://github.com/arielb1/pollcatch"
documentation = "https://docs.rs/pollcatch"
readme = "README.md"
keywords = ["timing"]

[dependencies]
jfrs = "0.2"
clap = { version="4", features=["derive"] }
anyhow = "1"
humantime = "2"
byteorder = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
